it works pretty good but still need to fix stretching of the cropped piece of stream

--- a/src/styles/components/camera-player.scss
+++ b/src/styles/components/camera-player.scss
@@ -4,8 +4,6 @@
   border-radius: 10px;
   background: #999;
 
-  overflow: hidden;
-
   &_screen_select {
     display: flex;
     justify-content: center;
