--- a/src/styles/components/screen.scss
+++ b/src/styles/components/screen.scss
@@ -1,12 +1,15 @@
 //[id^="screen"],
 .screen {
   width: 100%;
-  height: 240px;
+  height: 100%;
   overflow: hidden;
+
+  aspect-ratio: 4/3;
 
   background: #666;
 
   canvas {
     width: 100%;
+    height: 100%;
   }
 }
